--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>KingsMan</title>
     <link rel="stylesheet" href="NavBar.css">
     <link rel="stylesheet" href="slideshow.css">
-    <link rel="stylesheet" href="About.css">
+    <link rel="stylesheet" href="body.css">
 	<link rel="icon" type="image/x-icon" href="Image\HomePage\Logo.png">    
 </head>
 <body>
