--- a/ProductService.html
+++ b/ProductService.html
@@ -74,7 +74,7 @@
     <!-- Products -->
     <main>
         <section id="products">
-            <center><h2>Shoes</h2></center>
+            <center><h1 style="font-family: Kingman, sans-serif;">Shoes</h1></center>
 			</div>
             <div class="container">
                 <div class="product">
