--- a/ProductService.html
+++ b/ProductService.html
@@ -70,12 +70,13 @@
             </div>
         </div>
     </div>
-
+		<h1 style="font-family: Kingman, sans-serif;">Products</h1>
+</div>
     <!-- Products -->
     <main>
         <section id="products">
-            <center><h1 style="font-family: Kingman, sans-serif;">Shoes</h1></center>
-			</div>
+            <center><h2>Shoes</h2></center>
+
             <div class="container">
                 <div class="product">
                     <img src="Image\Products\shopping(0).jpg" alt="Dresslily Basketball Shoes for Men Original Plus Size">
