--- a/ProductService.html
+++ b/ProductService.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-		<h1 style="font-family: Kingman, sans-serif;">Products</h1>
+		<center><h1 style="font-family: Kingman, sans-serif;">Products</h1></center>
 </div>
     <!-- Products -->
     <main>
