--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
             <img src="Image/HomePage/Owner.jpg" alt="Founder and Owner">
         </div>
         <div class="text-container">
-            <h1>Troy Reynald R. Pineda</h1>
+            <h1>Owner pic here</h1>
             <p>The founder and owner of the Kingsman & Co Inc. in which primarily sells clothing product on exquisite attire.</p>
         </div>
     </div>
