--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
 
     <div class="container">
         <div class="image-container">
-            <img src="Image/HomePage/Owner.jpg" alt="Founder and Owner">
         </div>
         <div class="text-container">
-            <h1>Prepared by: Troy Reynald R. Pineda</h1>
+            <h1>Prepared by: Insert name here</h1>
             <p>The Founder and owner of the Kingsman & Corp Inc. in which primarily sells clothing product on exquisite attire.</p>
         </div>
     </div>
